--- a/CSS/style.css
+++ b/CSS/style.css
@@ -265,6 +265,6 @@ li:hover{
     padding: 0.6rem; 
     border-radius: 8px; 
     cursor: pointer; 
-    width: 75%
+    width: 80%;
 }
 
